crates/next-custom-transforms/tests/errors/use-cache-not-allowed/2/input.js
export default async function Page() {
  'use cache: x'

  return <p>hello world</p>
}
